# vghtpe_Electronic_inspection_information_webtopdf

./: .gitignore  .gitingore  Cargo.toml  Pipfile  README.md  a.json  build.spec  data.json  main.py  main.spec  main_UI.py  test.py  test_1.py  test_1.spec  test_data.json  testdata.json  text.txt  說明.md
